// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  font-size: 18px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  border-radius: 8px;
  border: 1px solid #004c40;
}

.c1:disabled {
  cursor: not-allowed;
  opacity: .5;
}

<input
  class="c0 c1"
  name="nome"
  placeholder="Nome"
  type="text"
  value="Danilo"
/>
`;

exports[`<TextField /> when field is invalid displays the respective error message 1`] = `
.c0 {
  font-size: 18px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  border-radius: 8px;
  border: 1px solid #004c40;
  border-color: #dc1515;
}

.c1 + span {
  color: #dc1515;
  font-size: 11px;
}

.c1:disabled {
  cursor: not-allowed;
  opacity: .5;
}

<input
  class="c0 c1"
  name="email"
  placeholder="Email"
  type="text"
  value="daniloemail.teste.com"
/>
`;
